--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: #303030;
   font-family: "Inter", sans-serif;
+  background: linear-gradient(to bottom, #0c70f2, #303030 40%);
+  background-repeat: no-repeat;
 }
 
 #main_nav {
+  background-color: #303030;
   width: 100%;
   height: 100px;
   display: flex;
