--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;600;800;900&display=swap");
 
+:root {
+  --blue-dnc: #0c70f2;
+  --black-dnc: #303030;
+  --font: "Inter";
+}
+
 body {
   margin: 0px;
   padding: 0px;
-  font-family: "Inter", sans-serif;
-  background: linear-gradient(to bottom, #0c70f2, #303030 40%);
+  font-family: var(--font), sans-serif;
+  background: linear-gradient(to bottom, var(--blue-dnc), var(--black-dnc) 40%);
   background-repeat: no-repeat;
 }
 
 #main_nav {
-  background-color: #303030;
+  background-color: var(--black-dnc);
   width: 100%;
   height: 100px;
   display: flex;
@@ -20,7 +26,7 @@ body {
 /* Menu de Navegação*/
 #main_nav button {
   margin-right: 5%;
-  background-color: #0c70f2;
+  background-color: var(--blue-dnc);
   border: none;
   height: 40%;
   font-weight: 600;
@@ -48,5 +54,93 @@ body {
 }
 
 #main_nav #header_menu .nav_links:hover {
-  color: #0c70f2;
+  color: var(--blue-dnc);
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+header {
+  color: white;
+}
+
+header h1 {
+  font-size: 4em;
+  font-weight: 800;
+  text-transform: uppercase;
+  text-align: center;
+
+  margin-bottom: 0.3em;
+}
+
+header p {
+  text-align: center;
+  font-weight: 700;
+  font-size: 2em;
+}
+
+header .invert {
+  background-color: black;
+  font-weight: bolder;
+}
+
+/*Formulário*/
+
+form {
+  color: white;
+  font-weight: 400;
+  font-size: 1.5em;
+  width: 60%;
+}
+
+.form_group {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+form input {
+  border-radius: 10px;
+  height: 56px;
+  border: none;
+  padding-left: 20px;
+  font-size: 1em;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+form label {
+  margin: 10px 0;
+}
+
+form input::placeholder {
+  color: rgba(57, 57, 57, 0.5);
+}
+
+.checkbox_itens {
+  display: flex;
+  font-size: 0.8em;
+  justify-content: space-between;
+  align-items: center;
+}
+
+input[type="checkbox"] {
+  transform: scale(1.7);
+}
+
+input[type="submit"] {
+  background-color: var(--blue-dnc);
+  width: 100%;
+  color: white;
+  font-weight: 600;
+  font-size: 1.2em;
+  margin-top: 3em;
+  box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
+  cursor: pointer;
 }
