Finished the project

--- a/style.css
+++ b/style.css
@@ -144,3 +144,138 @@ input[type="submit"] {
   box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
   cursor: pointer;
 }
+
+/* Footer */
+
+footer {
+  background-color: var(--blue-dnc);
+}
+
+footer .footer_top {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .footer_top nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 330px;
+}
+
+footer .footer_top ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  font-size: 18px;
+}
+
+footer .footer_top ul li {
+  text-align: center;
+  font-size: 18px;
+  margin: 20px 0px;
+}
+
+footer .footer_top h5 {
+  text-align: center;
+  color: white;
+  font-size: 18px;
+  background-color: var(--black-dnc);
+  border-radius: 10px;
+  padding: 10px 15px;
+  margin: 15px 0px;
+}
+
+footer .footer_top ul a {
+  color: white;
+  text-decoration: none;
+  transition: 500ms;
+}
+
+footer .footer_top ul a:hover {
+  color: var(--black-dnc);
+}
+
+footer .footer_top .adress {
+  font-weight: 600;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  width: 25%;
+}
+
+footer .footer_bottom {
+  display: flex;
+  justify-content: center;
+  margin: 0px;
+  padding: 10px;
+  align-items: center;
+}
+footer .footer_bottom a {
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+  height: 25px;
+  text-decoration: none;
+  padding: 0px 15px;
+}
+
+footer .footer_bottom a:first-child {
+  border-right: 3px solid white;
+}
+
+footer .footer_bottom a:hover {
+  color: var(--black-dnc);
+}
+
+@media only screen and (max-width: 600px) {
+  #main_nav {
+    flex-direction: column;
+    height: auto;
+    padding: 5px 0px;
+    width: 100%;
+  }
+  #main_nav #header_menu {
+    flex-direction: column;
+    width: 95%;
+  }
+  #main_nav #header_menu a {
+    display: flex;
+    align-items: center;
+    height: 50px;
+  }
+  #main_nav button {
+    width: 95%;
+    height: 30px;
+    margin: 0px;
+    padding: 0%;
+  }
+
+  header h1 {
+    font-size: 40px;
+  }
+
+  header p {
+    font-size: 28px;
+    padding: 0px 15px;
+  }
+
+  form {
+    width: 95%;
+    font-size: 20px;
+  }
+
+  .form_group .checkbox_itens {
+    font-size: 20px;
+  }
+
+  footer .footer_top {
+    flex-direction: column;
+  }
+
+  footer .footer_top .adress {
+    width: 95%;
+    margin-bottom: 20px;
+  }
+}
